kaminariの追加 fakerの追加 companyモデルの追加 アソシエーション図の作成 プルダウンメニューの追加 before_actionの追加

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -7,6 +7,8 @@
       <dd><%= @customer.full_name("様") %></dd>
       <dt>電子メール</dt>
       <dd><%= @customer.email %></dd>
+      <dt>会社名</dt>
+      <dd><%= @customer.company.name %></dd>
     </dl>
   </div>
 </div>
