--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -23,5 +23,9 @@
     <%= f.label :email %><br>
     <%= f.text_field :email, class: "form-control" %>
   </div>
+  <div class="form-group">
+    <%= f.label :company_id %><br>
+    <%= f.collection_select(:company_id, Company.all, :id, :name, class: "form-control") %>
+  </div>
   <%= f.submit %>
 <% end %>
