commentモデルの開発２（コメント表示）

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -13,6 +13,22 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-lg-12">
+    <h2>対応履歴</h2>
+    <% @comments.each do |comment| %>
+    <div class="media">
+        <div class="media-body">
+          <p><%= simple_format(comment.body) %></p>
+          <p class="text-muted">
+            投稿日時：<%= comment.created_at.strftime('%Y/%m/%d %H:%M') %>
+          </p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
 <hr />
 
 <div class="row">
