コメント機能実装

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -18,6 +18,10 @@
     <h2>対応履歴</h2>
     <% @comments.each do |comment| %>
     <div class="media">
+      <div class="media-left">
+         <%= image_tag comment.user.image_url, class: 'media-object', width: 64 %>
+         </div>
+    <div class="media">
         <div class="media-body">
           <p><%= simple_format(comment.body) %></p>
           <p class="text-muted">
@@ -40,6 +44,7 @@
         <%= f.text_area :body, class: "form-control" %>
       </div>
       <%= f.hidden_field :customer_id, value: @customer.id %>
+            <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.submit %>
     <% end %>
   </div>
