--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,12 @@
 
   <div class="form-group">
     <%= f.label :email, "電子メール" %><br />
-    <%= f.email_field :email, class: "form-control" %>
+    <%= f.text_field :email, class: "form-control" %>
+  </div>
+
+    <div class="form-group">
+    <%= f.label :image_url, "画像URL" %><br />
+    <%= f.email_field :image_url, class: "form-control" %>
   </div>
 
   <div class="form-group">
